# Ecommerce-assistant

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
backend/assistant/: agent.py  api.py  config.py  generate.py  load_data.py  main.py  rag.py  retrieve_data.py  tools.py
backend/assistant/data_handling/: load_data.py  qr_retriever.py  retrieve_data.py
backend/assistant/evaluation/: dataset.py  evaluate.py  run_eval.py
backend/evaluation/: dataset.py
backend/tests/: test_api.py  test_clean_data.py  test_tools.py
docs/: architecture.dio  dev-guide.md  user-guide.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
simple_demo/: get_data.py  main.py  utils.py
