[project]
name = "ecommerce-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "edge-tts>=7.2.7",
    "faiss-cpu>=1.13.1",
    "fastapi>=0.124.4",
    "iop>=0.0.4",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.5",
    "langsmith>=0.4.59",
    "openai-whisper>=20250625",
    "pillow>=12.0.0",
    "pymupdf>=1.26.7",
    "pypdf>=6.4.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "pyzbar>=0.1.9",
    "rich>=14.2.0",
    "sentence-transformers>=5.2.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
